--- a/src/assets/typing.scss
+++ b/src/assets/typing.scss
@@ -2,5 +2,5 @@
 
 .game-welcome-msg {
   color: theme('colors.slate.50');
-  @include typed('Hello Mrs.Dream,\A Do you want to join your Birthday GameShow?', null, (iterations: 0, caret-width: 6px));
+  @include typed('Xin chào Ms. Apricot,,\A Bạn đã sẵn sàng tham gia Gameshow sinh nhật của mình chưa?', null, (iterations: 0, caret-width: 6px));
 }
